0.1.3
Added: Configs to change repair multiplier for quick and anvil repairs
Added: Quark runes can now control the effect color of gear
Changed: Default enchanted effect color to purple (vanilla)
Changed: Updated all tool textures with consistent shading (base mod only)

0.1.2
Added: Configs to control vanilla gear nerfing (to disable, remove all items from the list)
Added: Blueprint package, an item that gives blueprints when used (pulls from a loot table)
Added: Rod blueprints/templates, to work around recipe conflicts (#5)
Added: Loot table function 'silentgear:select_tier' which can be used to generate random gear
Changed: Anvil repairs improved (50% of material durability), quick repair reduced to 35% of material durability
Changed: Nerfed gear defaults to 50% max durability (up from 10%)
Changed: Upgrades can now be applied in an anvil
Changed: Root advancement no longer gives blueprints, player spawns with a blueprint package instead (#7)
Changed: Stone and iron rods now accept "rodStone" and "rodIron"

0.1.1
Added: Wool and leather grips (craft leather or a block of wool with an existing tool)
Fixed: Quick repair recipe matching when it shouldn't, causing some recipes to stop working (#3)
Fixed: Some tools being broken by other mods (axes on bonsai pots, for example)

0.1.0
Updated for Silent Lib 3.0.0
Added: Main materials now display their tier in the tooltip
Added: More advancements!
Changed: New machete textures
Changed: Blueprint outline colors, remove shift function
Changed: Hammers and excavators are faster (50% penalty instead of 75%)
Fixed: Mattocks not actually working as shovels or axes
Fixed: Broken tools still appearing broken after repair

0.0.11
Updated for Silent Lib 2.3.18
Added: Missing texture for spoon upgrade

0.0.10
Added: Blaze/end rods are now tool rods
Added: Quartz-tipped upgrade
Added: Reach distance stat ("reach_distance" in the JSON files)
Added: Spoon upgrade, allows pickaxes to work as shovels