@@ -1,6 +1,7 @@
 0.1.3
 Added: Configs to change repair multiplier for quick and anvil repairs
 Added: Quark runes can now control the effect color of gear
+Changed: Improved block matching for hammers and excavators. Ores will only match the same block, but most others can be mined together.
 Changed: Default enchanted effect color to purple (vanilla)
 Changed: Updated all tool textures with consistent shading (base mod only)
 
